@@ -1,5 +1,10 @@
 2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/login.c: Added parameter to check_nologin. This will help
+	getting rid of the global pwent variable.
+
+2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/login.c: Added comments.
 	* src/login.c: Close the user and group files before dropping root
 	privileges.
